--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,14 +2,14 @@
 #-------------------------------
 # General Site Settings
 
-title: Kross
+title: Pranav Mimani
 logo:
-author: themefisher
-description: this is meta description
-email: steve.fruits@email.com
-phone: +880 2544 658 256
-address: 125/A, CA Commercial Area, California, USA
-copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Getjekyllthemes](https://getjekyllthemes.com)
+author: Pranav
+description: I am a Macroeconomist
+email: mimanipranav@gmail.com
+phone: 
+address: 
+copyright: 
 
 menu:
   - { name: About, link: "/about" }
@@ -300,4 +300,4 @@ client-slider-items:
 # Contact Section
 
 contact-title: Contact Info
-contact-email: steve.fruits@email.com
+contact-email: mimanipranav@gmail.com
