--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -176,5 +176,5 @@ education:
 #-------------------------------
 # Contact Section
 
-contact-title: Contact Info
+#contact-title: Contact Info
 contact-email: mimanipranav@gmail.com
