--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ title: Pranav Mimani
 logo:
 author: Pranav
 description: I am a Macroeconomist
-email: mimanipranav@gmail.com
+email: pranav.mimani@eui.eu; mimanipranav@gmail.com
 phone: 
 address: 
 copyright: 
