--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -103,8 +103,8 @@ social:
 education-title: Education
 education:
   - {
-      name: PhD Candidate(Economics),
-      date: "2020-2024(tentative)",
+      name: PhD Candidate (Economics),
+      date: "2020-2024",
       organization: "European University Institute",
     }
   - {
@@ -112,7 +112,7 @@ education:
       date: "2020",
       organization: "European University Institute",
     }
-    - {
+  - {
       name: Master of Arts (Economics),
       date: "2017",
       organization: "Delhi School of Economics",
