--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -139,22 +139,22 @@ education:
 # Portfolio (Section and Page)
 
 # Portfolio Home Section
-#portfolio-home-items:
- # - image: "assets/images/portfolio/item-1.png"
-  #  url: "#"
+portfolio-home-items:
+ - image: "assets/images/portfolio/item-1.png"
+  url: "#"
 
 # Portfolio Page
-#portfolio-label:
- # - { title: "UI/UX Design", type: "design" }
-  #- { title: "BRANDING", type: "branding" }
-  #- { title: "ILLUSTRATION", type: "illustration" }
+portfolio-label:
+ - { title: "UI/UX Design", type: "design" }
+- { title: "BRANDING", type: "branding" }
+- { title: "ILLUSTRATION", type: "illustration" }
 
 #portfolio-items:
  # - image: "assets/images/portfolio/item-1.png"
   #  url: "#"
-  #  portfolio-type:
-   #   - type: "design"
-    #  - type: "illustration"
+  portfolio-type:
+   - type: "design"
+  - type: "illustration"
 
  # - image: "assets/images/portfolio/item-2.png"
   #  url: "#"
