--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ title: Pranav Mimani
 #logo:
 author: Pranav
 description: I am a Macroeconomist
-email: pranav.mimani@eui.eu; mimanipranav@gmail.com
+email: pranav.mimani[at]eui.eu; mimanipranav[at]gmail.com
 #phone:
 #address:
 copyright:
@@ -115,4 +115,4 @@ portfolio-label:
 # Contact Section
 
 #contact-title: Contact Info
-contact-email: pranav.mimani@eui.eu; mimanipranav@gmail.com
+contact-email: pranav.mimani[at]eui.eu; mimanipranav[at]gmail.com
